--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 body {
   background: whitesmoke;
   font-family: 'proxima-nova-soft', sans-serif;
@@ -177,4 +178,193 @@ body {
 }
 .container .info span .fa {
   color: #e74c3c;
+}
+
+hr.space {
+  background: #fff none repeat scroll 0 0;
+  color: #fff;visibility: hidden
+}
+hr {
+  background: #e5e7ed none repeat scroll 0 0;
+  border: medium none;
+  clear: both;
+  color: #ddd;
+  float: none;
+  height: 1px;
+  margin: 0 0 1.45em;
+  width: 100%;
+}
+.splash{
+  background: #2870fb;
+  height: 100vh;
+}
+.splash .row{
+  height: 100vh;
+}
+.splash .row a{
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+}
+.splash .row a:hover{
+  text-decoration: none;
+}
+.selecao-roteiro .container-fluid{
+  padding: 0;
+}
+.selecao-roteiro .mapa{
+  height: 200px;
+  background: #eee;
+  text-align: center;
+}
+.selecao-roteiro h2{
+  font-size: 20px;
+}
+.selecao-roteiro .form{
+  padding: 20px;
+}
+.selecao-roteiro .btn-primary{
+  background: #2870fb;
+  border-radius: 30px;
+  text-transform: uppercase;
+  padding: 10px 20px;
+}
+.trajeto-roteiro .container-fluid{
+  padding: 0;
+}
+.trajeto-roteiro .title{
+  background: #2870fb;
+  padding: 10px 15px;
+  -weight: bold;
+  font-size: 18px;
+}
+.trajeto-roteiro .title a{
+  color: #fff;
+}
+.trajeto-roteiro .title a{
+  text-decoration: none;
+}
+.trajeto-roteiro .mapa{
+  height: 200px;
+  background: #eee;
+  text-align: center;
+}
+.trajeto-roteiro h2{
+  color: #2870fb;
+  font-size: 18px;
+  font-weight: bold;
+}
+.trajeto-roteiro p{
+  color: #999;
+  font-size: 14px;
+}
+.trajeto-roteiro .roteiro-info{
+  border-bottom: 1px solid #eee;
+  padding: 20px 30px;
+}
+.trajeto-roteiro .card{
+  margin: 20px;
+}
+.trajeto-roteiro .tempo-roteiro{
+  font-size: 40px;
+  font-weight: bold;
+  color: #2870fb;
+}
+.trajeto-roteiro .card p{
+  font-size: 18px;
+  line-height: 25px;
+}
+hr.space {
+  background: #fff none repeat scroll 0 0;
+  color: #fff;visibility: hidden
+}
+hr {
+  background: #e5e7ed none repeat scroll 0 0;
+  border: medium none;
+  clear: both;
+  color: #ddd;
+  float: none;
+  height: 1px;
+  margin: 0 0 1.45em;
+  width: 100%;
+}
+.splash{
+  background: #2870fb;
+  height: 100vh;
+}
+.splash .row{
+  height: 100vh;
+}
+.splash .row a{
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+}
+.splash .row a:hover{
+  text-decoration: none;
+}
+.selecao-roteiro .container-fluid{
+  padding: 0;
+}
+.selecao-roteiro .mapa{
+  height: 200px;
+  background: #eee;
+  text-align: center;
+}
+.selecao-roteiro h2{
+  font-size: 20px;
+}
+.selecao-roteiro .form{
+  padding: 20px;
+}
+.selecao-roteiro .btn-primary{
+  background: #2870fb;
+  border-radius: 30px;
+  text-transform: uppercase;
+  padding: 10px 20px;
+}
+.trajeto-roteiro .container-fluid{
+  padding: 0;
+}
+.trajeto-roteiro .title{
+  background: #2870fb;
+  padding: 10px 15px;
+  -weight: bold;
+  font-size: 18px;
+}
+.trajeto-roteiro .title a{
+  color: #fff;
+}
+.trajeto-roteiro .title a{
+  text-decoration: none;
+}
+.trajeto-roteiro .mapa{
+  height: 200px;
+  background: #eee;
+  text-align: center;
+}
+.trajeto-roteiro h2{
+  color: #2870fb;
+  font-size: 18px;
+  font-weight: bold;
+}
+.trajeto-roteiro p{
+  color: #999;
+  font-size: 14px;
+}
+.trajeto-roteiro .roteiro-info{
+  border-bottom: 1px solid #eee;
+  padding: 20px 30px;
+}
+.trajeto-roteiro .card{
+  margin: 20px;
+}
+.trajeto-roteiro .tempo-roteiro{
+  font-size: 40px;
+  font-weight: bold;
+  color: #2870fb;
+}
+.trajeto-roteiro .card p{
+  font-size: 18px;
+  line-height: 25px;
 }
